--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "type": "node",
             "request": "launch",
@@ -11,6 +12,15 @@
             "program": "${workspaceRoot}/node_modules/gulp/bin/gulp.js",
             "args": [
                 "cs"
+            ]
+        }
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Gulp build:dist",
+            "program": "${workspaceRoot}/node_modules/gulp/bin/gulp.js",
+            "args": [
+                "build:dist"
             ]
         }
         // {
