--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "gulp-replace": "^0.5.4",
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.0",
-    "jasmine": "^2.8.0",
+    "jasmine-core": "^2.8.0",
+    "karma": "^1.7.1",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^1.1.0",
     "main-bower-files": "^2.13.1",
     "run-sequence": "^1.2.2"
   },
