Register page input feedback.  SUBMIT IN NON-WORKING STATE.

--- a/bower.json
+++ b/bower.json
@@ -8,8 +8,12 @@
     "angular": "latest",
     "angular-ui-router": "1.0.0-beta.3",
     "oclazyload": "latest",
+    "angular-animate": "latest",
+    "angular-bootstrap": "latest",
     "angular-breadcrumb": "latest",
     "angular-loading-bar": "latest",
+    "angular-local-storage": "latest",
+    "angular-resource": "latest",
     "fontawesome": "latest",
     "simple-line-icons": "latest",
     "chart.js": "^2.3.0",
