--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp": "^3.9.1",
     "gulp-bower-src": "^0.1.0",
     "gulp-concat": "^2.6.0",
+    "gulp-eslint": "^4.0.0",
     "gulp-filter": "^4.0.0",
     "gulp-ng-annotate": "^2.0.0",
     "gulp-rename": "^1.2.2",
@@ -21,12 +22,13 @@
     "jasmine-core": "^2.8.0",
     "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.2.0",
+    "karma-ie-launcher": "^1.0.0",
     "karma-jasmine": "^1.1.0",
     "main-bower-files": "^2.13.1",
     "run-sequence": "^1.2.2"
   },
   "scripts": {
-    "test": "jasmine"
+    "test": "karma start karma.conf.js"
   },
   "author": "Łukasz Holeczek",
   "url": "http://coreui.io",
